Add a job for merge queue skipper

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,17 @@ defaults:
     shell: 'bash'
 
 jobs:
+  merge_queue_skipper:
+    name: 'Merge Queue Skipper'
+    runs-on: 'gemini-cli-ubuntu-16-core'
+    outputs:
+      skip: '${{ steps.merge-queue-ci-skipper.outputs.skip-check }}'
+    steps:
+      - id: merge-queue-ci-skipper
+        uses: cariad-tech/merge-queue-ci-skipper@1032489e59437862c90a08a2c92809c903883772 # ratchet:cariad-tech/merge-queue-ci-skipper@main
+        with:
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
   lint:
     name: 'Lint'
     runs-on: 'gemini-cli-ubuntu-16-core'
