--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,8 @@ jobs:
   lint:
     name: 'Lint'
     runs-on: 'gemini-cli-ubuntu-16-core'
+    needs: 'merge_queue_skipper'
+    if: 'needs.merge_queue_skipper.outputs.skip == "false"'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8' # ratchet:actions/checkout@v5
@@ -89,6 +91,8 @@ jobs:
     runs-on: 'gemini-cli-ubuntu-16-core'
     needs:
       - 'lint'
+      - 'merge_queue_skipper'
+    if: 'needs.merge_queue_skipper.outputs.skip == "false"'
     permissions:
       contents: 'read'
       checks: 'write'
@@ -146,6 +150,8 @@ jobs:
     runs-on: '${{ matrix.os }}'
     needs:
       - 'lint'
+      - 'merge_queue_skipper'
+    if: 'needs.merge_queue_skipper.outputs.skip == "false"'
     permissions:
       contents: 'read'
       checks: 'write'
@@ -212,6 +218,8 @@ jobs:
   codeql:
     name: 'CodeQL'
     runs-on: 'gemini-cli-ubuntu-16-core'
+    needs: 'merge_queue_skipper'
+    if: 'needs.merge_queue_skipper.outputs.skip == "false"'
     permissions:
       actions: 'read'
       contents: 'read'
@@ -233,7 +241,8 @@ jobs:
   # Check for changes in bundle size.
   bundle_size:
     name: 'Check Bundle Size'
-    if: "github.event_name == 'pull_request'"
+    needs: 'merge_queue_skipper'
+    if: "github.event_name == 'pull_request' && needs.merge_queue_skipper.outputs.skip == 'false'"
     runs-on: 'gemini-cli-ubuntu-16-core'
     permissions:
       contents: 'read' # For checkout
@@ -257,6 +266,8 @@ jobs:
   test_windows:
     name: 'Slow Test - Win'
     runs-on: 'gemini-cli-windows-16-core'
+    needs: 'merge_queue_skipper'
+    if: 'needs.merge_queue_skipper.outputs.skip == "false"'
     continue-on-error: true
 
     steps:
