Add queue skipper to e2e

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,9 +27,22 @@ concurrency:
     ${{ github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/heads/release/') }}
 
 jobs:
+  merge_queue_skipper:
+    name: 'Merge Queue Skipper'
+    runs-on: 'gemini-cli-ubuntu-16-core'
+    outputs:
+      skip: '${{ steps.merge-queue-ci-skipper.outputs.skip-check }}'
+    steps:
+      - id: merge-queue-ci-skipper
+        uses: cariad-tech/merge-queue-ci-skipper@1032489e59437862c90a08a2c92809c903883772 # ratchet:cariad-tech/merge-queue-ci-skipper@main
+        with:
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
   e2e_linux:
     name: 'E2E Test (Linux) - ${{ matrix.sandbox }}'
+    needs: 'merge_queue_skipper'
     if: |
+      needs.merge_queue_skipper.outputs.skip == 'false' &&
       github.event_name == 'push' ||
       github.event_name == 'merge_group' ||
       github.event_name == 'workflow_dispatch' ||
@@ -89,7 +102,9 @@ jobs:
 
   e2e_mac:
     name: 'E2E Test (macOS)'
+    needs: 'merge_queue_skipper'
     if: |
+      needs.merge_queue_skipper.outputs.skip == 'false' &&
       github.event_name == 'push' ||
       github.event_name == 'merge_group' ||
       github.event_name == 'workflow_dispatch' ||
@@ -139,7 +154,9 @@ jobs:
 
   e2e_windows:
     name: 'Slow E2E - Win'
+    needs: 'merge_queue_skipper'
     if: |
+      needs.merge_queue_skipper.outputs.skip == 'false' &&
       github.event_name == 'push' ||
       github.event_name == 'merge_group' ||
       github.event_name == 'workflow_dispatch' ||
