--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -31,9 +31,9 @@ jobs:
     name: 'Merge Queue Skipper'
     runs-on: 'gemini-cli-ubuntu-16-core'
     outputs:
-      skip: '${{ steps.merge-queue-ci-skipper.outputs.skip-check }}'
+      skip: '${{ steps.merge-queue-e2e-skipper.outputs.skip-check }}'
     steps:
-      - id: merge-queue-ci-skipper
+      - id: merge-queue-e2e-skipper
         uses: cariad-tech/merge-queue-ci-skipper@1032489e59437862c90a08a2c92809c903883772 # ratchet:cariad-tech/merge-queue-ci-skipper@main
         with:
           secret: ${{ secrets.GITHUB_TOKEN }}
