--- a/.github/workflows/release-rollback.yml
+++ b/.github/workflows/release-rollback.yml
@@ -53,7 +53,7 @@ jobs:
           scope: '@google'
 
       - name: 'Get Origin Version Tag'
-        id: 'origin_version'
+        id: 'origin_tag'
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         shell: 'bash'
@@ -61,7 +61,7 @@ jobs:
           echo "ORIGIN_TAG=v${{ github.events.inputs.rollback_origin }}" >> "$GITHUB_OUTPUT"
 
       - name: 'Get Origin Commit Hash'
-        id: 'release_hash'
+        id: 'origin_hash'
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         shell: 'bash'
@@ -97,7 +97,7 @@ jobs:
         if: "${{ github.event.inputs.dry-run == 'true' }}"
         shell: 'bash'
         run: |
-          echo "Dry run": Inputs - rollback_origin: ${{ github.event.inputs.rollback_origin }} rollback_destination: ${{ github.event.inputs.rollback_destination }} channel: ${{ github.event.inputs.channel }} ref: ${{ github.event.inputs.ref }} }}
-          echo "Dry run": Outputs - RELEASE_VERSION: ${{ steps.release_version.outputs.RELEASE_VERSION }} ORIGIN_HASH: ${{ steps.release_hash.outputs.ORIGIN_HASH }}
+          echo "Dry run": Inputs - rollback_origin: ${{ github.event.inputs.rollback_origin }} rollback_destination: ${{ github.event.inputs.rollback_destination }} channel: ${{ github.event.inputs.channel }} ref: ${{ github.event.inputs.ref }}
+          echo "Dry run": Outputs - ORIGIN_TAG: ${{ steps.origin_tag.outputs.ORIGIN_TAG }} ORIGIN_HASH: ${{ steps.origin_hash.outputs.ORIGIN_HASH }}
           echo "Dry run: Would have deleted the github release with tag ${{ steps.release_version.outputs.RELEASE_VERSION }}"
-          echo "Dry run: Would have added tag rollback to ${{ steps.release_hash.outputs.ORIGIN_HASH }}"
+          echo "Dry run: Would have added tag rollback to ${{ steps.origin_hash.outputs.ORIGIN_HASH }}"
