--- a/.github/workflows/release-rollback.yml
+++ b/.github/workflows/release-rollback.yml
@@ -58,7 +58,7 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         shell: 'bash'
         run: |
-          echo "ORIGIN_TAG=$(v${{ github.events.inputs.rollback_origin }})" >> "$GITHUB_OUTPUT"
+          echo "ORIGIN_TAG=v${{ github.events.inputs.rollback_origin }}" >> "$GITHUB_OUTPUT"
 
       - name: 'Get Origin Commit Hash'
         id: 'origin_hash'
