--- a/.github/workflows/release-rollback.yml
+++ b/.github/workflows/release-rollback.yml
@@ -90,7 +90,7 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         shell: 'bash'
         run: |
-          git tag rollback '${{ steps.origin_hash.outputs.ORIGIN_HASH }}'
+          git tag '${{ steps.origin_tag.outputs.ORIGIN_TAG } }}'-rollback '${{ steps.origin_hash.outputs.ORIGIN_HASH }}'
 
       - name: 'Log Dry run'
         if: "${{ github.event.inputs.dry-run == 'true' }}"
@@ -99,4 +99,4 @@ jobs:
           echo "Dry run": Inputs - rollback_origin: ${{ github.event.inputs.rollback_origin }} rollback_destination: ${{ github.event.inputs.rollback_destination }} channel: ${{ github.event.inputs.channel }} ref: ${{ github.event.inputs.ref }}
           echo "Dry run": Outputs - ORIGIN_TAG: ${{ steps.origin_tag.outputs.ORIGIN_TAG }} ORIGIN_HASH: ${{ steps.origin_hash.outputs.ORIGIN_HASH }}
           echo "Dry run: Would have deleted the github release with tag ${{ steps.origin_tag.outputs.ORIGIN_TAG }}"
-          echo "Dry run: Would have added tag rollback to ${{ steps.origin_hash.outputs.ORIGIN_HASH }}"
+          echo "Dry run: Would have added tag ${{ steps.origin_tag.outputs.ORIGIN_TAG } }}-rollback to ${{ steps.origin_hash.outputs.ORIGIN_HASH }}"
