--- a/.github/workflows/release-rollback.yml
+++ b/.github/workflows/release-rollback.yml
@@ -108,10 +108,11 @@ jobs:
         shell: 'bash'
         run: |
           RELEASE_TAG=$(gh release view ${{ steps.origin_tag.outputs.ORIGIN_TAG }} --json tagName --jq .tagName)
-          if RELEASE_TAG == '${{ steps.origin_tag.outputs.ORIGIN_TAG }}'; then
+          if [ "$RELEASE_TAG" = '${{ steps.origin_tag.outputs.ORIGIN_TAG }}' ]; then
             echo '❌ Failed to delete release with tag ${{ steps.origin_tag.outputs.ORIGIN_TAG }}'
             echo '❌ This means the release was not deleted, and the workflow should fail.'
             exit 1
+          fi
 
       - name: 'Add Rollback Tag'
         id: "rollback_tag"
@@ -130,10 +131,11 @@ jobs:
         shell: 'bash'
         run: |
           ROLLBACK_COMMIT=$(git rev-parse -q --verify ${{ steps.rollback_tag.outputs.ROLLBACK_TAG }})
-          if ROLLBACK_COMMIT != '${{ steps.origin_hash.outputs.ORIGIN_HASH }}'; then
+          if "$ROLLBACK_COMMIT" != "${{ steps.origin_hash.outputs.ORIGIN_HASH }}"; then
             echo '❌ Failed to add tag ${{ steps.rollback_tag.outputs.ROLLBACK_TAG }} to commit ${{ steps.origin_hash.outputs.ORIGIN_HASH }}'
             echo '❌ This means the tag was not added, and the workflow should fail.'
             exit 1
+          fi
 
       - name: 'Log Dry run'
         if: "${{ github.event.inputs.dry-run == 'true' }}"
